<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <!--<TextView-->
        <!--android:id="@+id/title_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="@dimen/title_bottom_margin"-->
        <!--android:fontFamily="sans-serif-smallcaps"-->
        <!--android:text="@string/app_name"-->
        <!--android:textSize="20sp" />-->

    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/vesatogo_logo"/>


    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:inputType="phone" />

            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verfifyNumber"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3.0">

            <Button
                android:id="@+id/button_start_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sendSms"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_verify_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verifyBtn"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
            <Button
                android:id="@+id/register_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="Register User"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>