<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorVesatogo"
    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/vesatogo_logo" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Register User"
            android:textColor="@color/colorHeading"
            android:textSize="30sp"/>

            <EditText
                android:id="@+id/name_farmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:hint="@string/name_farmer"
                />


            <EditText
                android:id="@+id/village_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:hint="@string/village_name"
                />


        <EditText
            android:id="@+id/mob_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:hint="@string/mob_number"
            />

        <EditText
            android:id="@+id/land_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:hint="@string/land_size"
            />

        <Button
            android:id="@+id/register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="register"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/back_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/back_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="15dp" />



    </LinearLayout>



</RelativeLayout>